# nps-senti

./: .env.example  .gitignore  AGENTS.md  README.md  check_text.py  debug_comments.py  main.py  pyproject.toml  test_remove_comments.py
.github/workflows/: main.yaml
apps/cli/src/nps_senti/: __init__.py  (+1 more)
crawl/: README.md  cli.py  pyproject.toml
crawl/config/: domains_allowlist.txt  keywords.txt  params.yaml  params_forum_test.yaml
crawl/core/: config.py  models.py  pipeline.py  utils.py
crawl/core/auto/: runner.py  scheduler.py  state.py
crawl/core/discovery/: forums.py  gdelt.py  youtube.py
crawl/core/extract/: extractor.py
crawl/core/fetch/: fetcher.py
crawl/core/storage/: index.py  writer.py
crawl/plan_a/: __init__.py  cli.py  config.py  models.py  pipeline.py
crawl/plan_a/dedupe/: simhash_dedupe.py
crawl/plan_a/discovery/: __init__.py  commoncrawl.py  forums.py  gdelt.py  youtube.py
crawl/plan_a/extract/: extractor.py
crawl/plan_a/fetch/: fetcher.py
crawl/plan_a/storage/: index.py  writer.py
docs/: autocrawl.md  cli-usage.md  crawl-overview.md  data-schema.md
ml/: __init__.py  config.py  grok_client.py  grok_sentiment_cli.py  nps_sentiment.py  prompts.py
preprocess/: README.md  gdelt_dedup.cpp  jsonl_dedup.cpp
preprocess/preprocess_dcinside/: stage1_models_io.py  stage2_transform.py  stage3_cli.py
preprocess/preprocess_forum4/: format_forums_combined.py  format_ppomppu.py  format_theqoo.py
preprocess/preprocess_gdelt/: dedup_fine_cli.py  dedup_gdelt.py  stage1_models_io.py  stage2_transform.py  stage3_cli.py
preprocess/preprocess_merge/: merge_preprocessed_cli.py
preprocess/preprocess_youtube/: stage1_models_io.py  stage2_transform.py  stage3_cli.py
scrape/: base_scraper.py  main.py
scrape/scrapers/: dcinside.py  dummy.py  fmkorea.py  mlbpark.py  naver_news.py  youtube.py
src/nps_senti/: __init__.py  cli.py
src/nps_senti/core/: config.py  db.py  io.py  log.py
src/nps_senti/crawl/: models.py  run.py
tests/: conftest.py  test_autocrawl_youtube_comments.py  test_discovery_gdelt.py  test_empty.py  test_extractor_fallback_title.py  test_extractor_forum_published_at.py  test_extractor_forum_quality_comments.py  test_extractor_ppomppu_body.py  test_extractor_theqoo_body.py  test_extractor_youtube.py  test_fetcher_decode.py  test_fetcher_robots.py  test_forums_parsers.py  test_pipeline_integration.py  test_utils_normalize.py
tests/crawl/: test_press_release_source.py
tests/integration/: test_korea_policy_rss.py
viz/: app.py
viz/nps_dashboard/: chart_helpers.py  config.py  data.py  text_processing.py  wordcloud_tools.py  xai_live.py
viz/stopwords/: stopwords-en.txt
(+6 files in other folders)
