[project]
name = "nps-senti"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13.0, <3.14"
dependencies = [
    "dotenv>=0.9.9",
    "requests>=2.32.5",
    "nps-senti-crawl",
    "streamlit>=1.51.0",
]

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.3.251201",
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "ruff>=0.13.0",
]

[tool.uv.sources]
nps-senti-crawl = { path = "crawl" }

[tool.pyright]
include = ["viz"]
exclude = [
  ".venv",
  "**/__pycache__",
  "viz/app.py"
]

typeCheckingMode = "basic"

reportMissingImports = "none"
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUnknownParameterType = "none"
