[project]
name = "nps-senti-crawl"
version = "0.1.0"
description = "Unified crawler pipeline for nps-senti"
requires-python = ">=3.13.0, <3.14"
dependencies = [
    "dotenv>=0.9.9",
    "langdetect>=1.0.9",
    "pyyaml>=6.0.2",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
    "beautifulsoup4>=4.12.3",
    "tqdm>=4.66.5",
    "trafilatura>=1.9.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
